# bitmask

./: bitmask.cabal
src/Data/: Bitmask.hs
tests/: sanity.hs
