name:                bitmask
version:             0.1.0.0
synopsis:            Datatypes to ints and back
homepage:            https://github.com/joelteon/bitmask.git
license:             MIT
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Bitmask
  build-depends:       base >=4.6 && <4.8, template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite sanity
  type: exitcode-stdio-1.0
  main-is: sanity.hs
  hs-source-dirs: tests
  build-depends: base, bitmask, QuickCheck
